<resources>
    <string name="app_name">Pocket Management</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>

<!--    Bottom Navigation Item Titles-->

    <string name="employees_action_title">Employees</string>
    <string name="customers_action_title">Customers</string>
    <string name="projects_action_title">Projects</string>
    <string name="projects">Projects</string>
    <string name="employees">Employees</string>
    <string name="customer">Customer</string>

    <string name="project_complete_until">Complete until %1$s</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>

    <string name="first_name_error">First name cannot be empty</string>
    <string name="last_name_error">Last name cannot be empty</string>
    <string name="email_error">Email is not valid</string>
    <string name="position_error">Position cannot be empty</string>
    <string name="phone_number">Phone number</string>
    <string name="country">Country</string>

    <string name="country_error">Country cannot be empty</string>
    <string name="phone_number_error">Phone number cannot be empty</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="deadline">Deadline</string>
    <string name="edit_employees">Edit employees</string>
    <string name="budget">Budget</string>

    <string name="budget_format">Budget: %1$s\$</string>
    <string name="salary">Salary</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>

    <string name="all">All</string>
    <string name="incoming">Incoming</string>
    <string name="outgoing">Outgoing</string>
    <string name="select_employee">Select employee</string>
    <string name="amount">Amount</string>
    <string name="commit_paymenty">Commit paymenty</string>
    <string name="select_customer">Select customer</string>
    <string name="select_project">Select project</string>

    <string name="email_validation_error">Email not valid</string>
    <string name="password_validation_error">Password not valid</string>
</resources>