<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/customer_name_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:textSize="20sp"
        android:visibility="gone"
        tools:visibility="visible"
        tools:text="John Smith" />

    <TextView
        android:id="@+id/country_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:visibility="gone"
        tools:visibility="visible"
        tools:text="Android Developer" />

    <Button
        android:id="@+id/change_customer_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:text="@string/select_customer" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="15dp"
        android:background="@color/gray" />


    <TextView
        android:id="@+id/project_name_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:textSize="20sp"
        android:visibility="gone"
        tools:visibility="visible"
        tools:text="Atlas" />

    <TextView
        android:id="@+id/project_status_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:visibility="gone"
        tools:visibility="visible"
        tools:text="In Dev" />

    <Button
        android:id="@+id/change_project_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:text="@string/select_project" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="15dp"
        android:background="@color/gray" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/budget_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_money">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/amount_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:inputType="numberDecimal"
            android:hint="@string/amount" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/create_transaction_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:text="@string/commit_paymenty"/>

</LinearLayout>